data/forge_javadoc/1.7.10/processed/net_minecraft_entity_ai_attributes_BaseAttributeMap.md
# BaseAttributeMap

**Inheritance:** java.lang.Object → net.minecraft.entity.ai.attributes.BaseAttributeMap

## Class signature

```java
public abstract class BaseAttributeMap extends java.lang.Object
```

## Constructors

- `BaseAttributeMap()`

## Methods

- `void addAttributeInstance(ModifiableAttributeInstance p_111149_1_)`
- `void applyAttributeModifiers(Multimap p_111147_1_)`
- `java.util.Collection getAllAttributes()`
- `IAttributeInstance getAttributeInstance(IAttribute p_111151_1_)`
- `IAttributeInstance getAttributeInstanceByName(java.lang.String p_111152_1_)`
- `abstract IAttributeInstance registerAttribute(IAttribute p_111150_1_)`
- `void removeAttributeModifiers(Multimap p_111148_1_)`

## Fields

- `protected java.util.Map attributes`
- `protected java.util.Map attributesByName`